[gd_scene load_steps=3 format=2]

[ext_resource path="res://common/lobby/Lobby.tscn" type="PackedScene" id=1]
[ext_resource path="res://client/lobby/ClientLobby.gd" type="Script" id=2]

[node name="Lobby" instance=ExtResource( 1 )]
script = ExtResource( 2 )
startButtonPath = NodePath("StartButton")
leaveButtonPath = NodePath("LeaveButton")

[node name="StartButton" type="Button" parent="." index="2"]
margin_left = 772.0
margin_top = 257.0
margin_right = 855.0
margin_bottom = 277.0
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaveButton" type="Button" parent="." index="3"]
margin_left = 780.855
margin_top = 82.9828
margin_right = 829.855
margin_bottom = 102.983
text = "Leave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartTimer" type="Timer" parent="." index="4"]
wait_time = 5.0

[node name="StartLabel" type="Label" parent="." index="5"]
visible = false
margin_left = 334.629
margin_top = 34.6688
margin_right = 440.629
margin_bottom = 48.6688
text = "Starting in 0:05"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="LeaveButton" to="." method="_on_LeaveButton_pressed"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
